[gd_scene load_steps=16 format=3 uid="uid://bdsxfxpria0gp"]

[ext_resource type="Script" path="res://scripts/components/magic_circle.gd" id="1_114ni"]
[ext_resource type="PackedScene" uid="uid://cicwqsj3byj4u" path="res://scenes/components/spawn_collision_handler.tscn" id="3_4838f"]
[ext_resource type="PackedScene" uid="uid://bk5hh7qxofgw5" path="res://scenes/objects/pillar_broken.tscn" id="3_ae15p"]
[ext_resource type="PackedScene" uid="uid://7pekoii3l4xw" path="res://scenes/objects/pillar.tscn" id="4_ciroy"]
[ext_resource type="Shader" path="res://scenes/characters/enemy.gdshader" id="5_tumd1"]
[ext_resource type="Texture2D" uid="uid://c1nhkla47hafg" path="res://art/objects/magic_circle_active.png" id="5_w6cpg"]
[ext_resource type="Texture2D" uid="uid://umt1s3isip1" path="res://art/objects/magic_circle_cleared.png" id="6_2klxm"]
[ext_resource type="Texture2D" uid="uid://c8bduam0tg1y5" path="res://art/objects/magic circle barrier.png" id="6_b21vk"]
[ext_resource type="Texture2D" uid="uid://ccddokifbdglu" path="res://art/objects/magic_circle_idle.png" id="7_ris3l"]
[ext_resource type="AudioStream" uid="uid://deai6fkwkew01" path="res://sounds/magic_circle.wav" id="10_n31i0"]
[ext_resource type="AudioStream" uid="uid://cr2pcc8gnxpl4" path="res://sounds/magic_circle_activated.wav" id="11_bysre"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qlfrf"]
radius = 131.015

[sub_resource type="CircleShape2D" id="CircleShape2D_yuvbf"]
radius = 857.08

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ykodi"]
resource_local_to_scene = true
shader = ExtResource("5_tumd1")
shader_parameter/line_color = Color(0.517647, 0.411765, 1, 1)
shader_parameter/line_thickness = 6.479
shader_parameter/value = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_2c16o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_b21vk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="magic_circle" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_114ni")

[node name="Pillars" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Pillar" parent="Pillars" instance=ExtResource("4_ciroy")]
process_mode = 3
y_sort_enabled = false
position = Vector2(-700, 0)
scale = Vector2(0.685, 0.685)

[node name="Pillar2" parent="Pillars" instance=ExtResource("4_ciroy")]
process_mode = 3
y_sort_enabled = false
position = Vector2(700, 0)
scale = Vector2(0.685, 0.685)

[node name="Pillar3" parent="Pillars" instance=ExtResource("4_ciroy")]
process_mode = 3
y_sort_enabled = false
position = Vector2(0, -600)
scale = Vector2(0.685, 0.685)

[node name="pillar_broken" parent="Pillars" instance=ExtResource("3_ae15p")]
process_mode = 3
position = Vector2(0, 600)
scale = Vector2(0.8, 0.8)

[node name="Idle" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-28, -57)
scale = Vector2(0.532374, 0.532374)
texture = ExtResource("7_ris3l")

[node name="Active" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
position = Vector2(-28, -57)
scale = Vector2(0.532374, 0.532374)
texture = ExtResource("5_w6cpg")

[node name="Cleared" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(-28, -57)
scale = Vector2(0.532374, 0.532374)
texture = ExtResource("6_2klxm")

[node name="Circle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Circle"]
scale = Vector2(2, 1)
shape = SubResource("CircleShape2D_qlfrf")

[node name="Time" type="Label" parent="."]
visible = false
z_index = 2
offset_left = -14.0
offset_top = -221.0
offset_right = 15.0
offset_bottom = -149.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "0"

[node name="SuccessTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpawnCollisionHandler" parent="." node_paths=PackedStringArray("spawn_collider") instance=ExtResource("3_4838f")]
spawn_collider = NodePath("../SpawnCollision")
land_on_ready = false
on_ready_attempts = 0
disable_after_land = false
remove_obstruction = true
clear_on_bad_landing = false

[node name="SpawnCollision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnCollision"]
shape = SubResource("CircleShape2D_yuvbf")

[node name="Barrier" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Barrier"]
material = SubResource("ShaderMaterial_ykodi")
scale = Vector2(1.762, 1.762)
sprite_frames = SubResource("SpriteFrames_2c16o")

[node name="Marker2D" type="Marker2D" parent="Barrier"]
position = Vector2(-796, 0)

[node name="activated_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_n31i0")
bus = &"Music"

[node name="finished_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_bysre")

[connection signal="body_entered" from="Circle" to="." method="_on_circle_body_entered"]
[connection signal="body_exited" from="Circle" to="." method="_on_circle_body_exited"]
[connection signal="timeout" from="SuccessTimer" to="." method="_on_success_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
